tests/compile/derive-invalid-skip.stderr
error: expected `,`
 --> $DIR/derive-invalid-skip.rs:8:18
  |
8 |     #[merge(skip = true)]
  |                  ^
